--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,63 @@
+:root {
+	--color-bg: rgb(18, 18, 18);
+	--color-text: rgb(222, 222, 222);
+	--color-highlight: rgb(41, 134, 59);
+	--color-empty: rgb(18, 18, 18);
+	--color-correct: rgb(41, 134, 59);
+	--color-misplaced: rgb(208, 168, 57);
+	--size-box: 50px;
+	--size-gap: 6px;
+}
+
 body {
-	background-color: rgb(18, 18, 18);
-	color: rgb(222, 222, 222);
+	background-color: var(--color-bg);
+	color: var(--color-text);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
+h1 {
+	color: gold;
+}
+
+h2 {
+	margin: 20px 0 0 0;
+}
+
 .letters-container {
 	display: flex;
 	flex-direction: row;
-	gap: 2px;
-	margin: 2px;
+	gap: var(--size-gap);
+	margin: 4px;
 }
 
 input {
-	background: rgb(222, 222, 222);
-	width: 30px;
-	height: 30px;
-	border: 0;
+	background: var(--color-bg);
+	width: var(--size-box);
+	height: var(--size-box);
+	color: var(--color-text);
+	font-size: 30px;
+	text-align: center;
+	text-transform: uppercase;
+	border: 1px solid var(--color-text);
+	padding: 0px;
 }
 
 #excluded-letters {
-	width: 174px;
-	margin: 2px;
+	width: calc(var(--size-box) * 5 + var(--size-gap) * 4);
+	margin: 4px;
+}
+
+#amount {
+	color: var(--color-highlight);
+}
+
+#possible-words {
+	width: calc(var(--size-box) * 5 + var(--size-gap) * 4);
+	height: 300px;
+	padding: 2px 0;
+	text-align: center;
+	border: 1px solid rgb(91, 91, 91);
+	overflow-x: auto;
 }
